@@ -88,6 +88,7 @@ a.feeditemlnk
     overflow: auto;
     overflow-x: hidden;
     overflow-y: auto;
+    padding-top: 2px;
 }
 #rightfooter
 {
