@@ -53,3 +53,11 @@ HORAS TRABALHADAS: 5h
 - reader
 
 HORAS TRABALHADAS: 2h
+
+==========
+12/07/2009
+==========
+
+- reader (bugfixes)
+
+HORAS TRABALHADAS: 3h
